--- a/style.css
+++ b/style.css
@@ -1,119 +1,176 @@
-
-
-.col-izq{
-    float: left;
-    width: 50%;
+.col-izq {
+  float: left;
+  width: 50%;
 }
 
-.col-der{
-    float: left;
-    width: 50%;
-       
+.col-der {
+  float: left;
+  width: 50%;
 }
 
-.margen{
-    margin-top: -10px;
+.margen {
+  margin-top: -10px;
 }
-    
 
-.alineacion{
-    text-align: center;
-    border: 1px solid 80px;
-    padding: 80px;
+.alineacion {
+  text-align: center;
+  border: 1px solid 80px;
+  padding: 80px;
 }
 
 .logo {
-    bottom: 40px;
-    position:fixed;
-    right: 10px;
-    height: 10px;
-
+  bottom: 40px;
+  position: fixed;
+  right: 10px;
+  height: 10px;
 }
 
-.logo-2{
-    bottom: 60px;
-    position:fixed;
-    right: 10px;
-    
-
+.logo-2 {
+  bottom: 60px;
+  position: fixed;
+  right: 10px;
 }
 
-.espacio{
-    text-align: center;
-    margin-top: 50px;
+.espacio {
+  text-align: center;
+  margin-top: 50px;
 }
 
-.de-prueba-izquierda{
-    float:left;
-    width: 65%;
-    border: 1px solid grey;
-    margin-bottom: 20px;
-    
+.de-prueba-izquierda {
+  float: left;
+  width: 65%;
+  border: 1px solid grey;
+  margin-bottom: 20px;
 }
 
-.de-prueba-derecha{
-    float:right;
-    width: 34%;
-    border: 1px solid grey ;
-    padding: 10px;
-    
-
+.de-prueba-derecha {
+  float: right;
+  width: 34%;
+  border: 1px solid grey;
+  padding: 10px;
 }
 
-.algo{
-    margin-top: 220px;
-    border: 1px solid grey;
-    background-color: grey;
-    
+.algo {
+  margin-top: 220px;
+  border: 1px solid grey;
+  background-color: grey;
 }
 
-.fotardas{
-    display: inline;
-    margin-left: 10px;
-    margin-right: 50px;
+.fotardas {
+  display: inline;
+  margin-left: 10px;
+  margin-right: 50px;
 }
 
-.otra-fotarda{
-    display: inline;
-    margin-left: 20px;
+.otra-fotarda {
+  display: inline;
+  margin-left: 20px;
 }
 
-
-.margen2{
-    text-align: center;
-    margin-top: 600px;
+.margen2 {
+  text-align: center;
+  margin-top: 600px;
 }
 
-
-.columna-izquierda{
-    float: left;
-    width: 33.3333333%;
-    object-fit: cover;
-   
+.columna-izquierda {
+  float: left;
+  width: 33.3333333%;
+  object-fit: cover;
 }
 
-.columna-medio{
-    float: left;
-    width: 33.3333333%;
-    object-fit: cover;
-    
+.columna-medio {
+  float: left;
+  width: 33.3333333%;
+  object-fit: cover;
 }
 
-.columna-derecha{
-    float: right;
-    width: 33.3333333%;
-    object-fit: cover;
+.columna-derecha {
+  float: right;
+  width: 33.3333333%;
+  object-fit: cover;
 }
 
-.titulo-lugares{
-    margin-top: 500px;
-    border:4px solid brown;
-    background-color: brown;
-    text-align: center;
-    padding: 10px;
+.titulo-lugares {
+  margin-top: 500px;
+  border: 4px solid;
+  text-align: center;
+  padding: 10px;
 }
 
-.espacio-lugares{
-   margin-top: 40px;
-   text-align: center;
+.espacio-lugares {
+  margin-top: 40px;
+  text-align: center;
+}
+
+.titulo-carta {
+  text-align: center;
+  border: 4px solid;
+  background-color: rgb(212, 193, 193);
+  text-align: center;
+  padding: 10px;
+  margin-top: 100px;
+}
+
+.ubicacion {
+  margin-top: 40px;
+}
+
+.letra-carta {
+  font-family: fantasy;
+}
+
+.estilo-coctail {
+  margin-top: 1600px;
+  text-align: center;
+}
+
+.estilo-carta {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.margen-postre {
+  margin-top: 1200px;
+}
+
+.nav {
+  position: fixed;
+  width: 100%;
+}
+
+.topnav {
+  background-color: rgb(165, 131, 131);
+  overflow: hidden;
+  position: fixed;
+  top: 0%;
+  z-index: 1;
+  width: 100%;
+}
+
+.topnav a {
+  float: left;
+  color: whitesmoke;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: rgb(165, 131, 131);
+  color: white;
+}
+
+.clase-footer {
+  text-align: center;
+  border: 4px solid;
+  background-color: rgb(212, 193, 193);
+  text-align: center;
+  padding: 10px;
+  margin-top: 100px;
 }
